[tool.poetry]
name = "api"
version = "0.1.0"
description = "Fastapi app for storing and retrieving recipes"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
orm = "^0.1.5"
asyncpg = "^0.20.1"
uvicorn = "^0.11.5"
psycopg2-binary = "^2.8.5"
spacy = "^2.3.0"
loguru = "^0.5.1"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
