[tool.poetry]
name = "api"
version = "0.1.0"
description = "Fastapi app for storing and retrieving recipes"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.3"
asyncpg = "^0.20.1"
fastapi = "^0.61.2"
loguru = "^0.5.1"
orm = "^0.1.5"
psycopg2-binary = "^2.8.5"
spacy = "^2.3.0"
uvicorn = "^0.11.5"
httpx = "^0.16.1"
fastapi-pagination = "^0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
