[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Web scraper for collecting recipes"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.23.0"
scrapy = "^2.1.0"
spacy = "^2.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
