[tool.poetry]
name = "api"
version = "0.1.0"
description = "Fastapi app for storing and retrieving recipes"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.5"
asyncpg = "^0.25.0"
fastapi = "^0.71.0"
loguru = "^0.5.3"
orm = "^0.3.1"
psycopg2-binary = "^2.9.3"
spacy = "^2.3.0"
uvicorn = "^0.16.0"
httpx = "^0.21.3"
fastapi-pagination = "^0.9.1"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
