[tool.poetry]
name = "api"
version = "0.1.0"
description = "Fastapi app for storing and retrieving recipes"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.5"
asyncpg = "^0.25.0"
fastapi = "^0.71.0"
loguru = "^0.5.3"
psycopg2-binary = "^2.9.3"
spacy = "^2.3.0"
uvicorn = "^0.16.0"
httpx = "^0.21.3"
fastapi-pagination = "^0.9.1"
gunicorn = "^20.1.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.31"}

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.5"
pytest-asyncio = "^0.18.1"
debugpy = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = ['app/db/migrations/', 'tests/']
